# CI312

./: .gitignore  Makefile  README.md
lab1/: Lab1.md  README.md  lab1.html
lab1/src/: HelloWorld.cpp
lab2/: CMakeLists.txt  README.md
lab2/source/example1/: Triangle.cpp  Triangle.h  example1.cpp
lab3/: CMakeLists.txt  README.md
lab3/source/example1/: Triangle.cpp  example1.cpp
lab3/src/polygon/: FileShape.cpp  Triangle.cpp  Triangle.h  Viewer.cpp  Viewer.h  polygon.cpp
lab4/: CMakeLists.txt  README.md  lab4.html
lab4/src/shaded/: FileShape.cpp  ShadedPolygon.cpp  Shape.h  Triangle.cpp  Viewer.cpp
lab5/: CMakeLists.txt  README.md  lab5.html
lab5/src/shaded/: Polygon.cpp  Viewer.h
lab6-8/: README.md
lab6-8/models/: can1.ply  chair.ply  chair3.ply  peter2.ply  vive.ply
lab6-8/processed_models/: peter.mlp
libraries/: LightFragmentShader.hlsl  LightVertexShader.hlsl  Paths.h
libraries/shaders/: CameraVertexShader.glsl  ColorsFragmentShader.glsl  ColorsGeometryShader.glsl  ColorsVertexShader.glsl
